# sibylapp2

./: .gitignore  1_Explore_A_Prediction.py  1_Explore_a_Prediction.py  LICENSE  README.md  Setup_Wizard.py  config2.yml  contributions.py  data.py  importance.py  main.py  pyproject.toml  setup_wizard.py  tasks.py
.devcontainer/: devcontainer.json
.streamlit/: config.toml
pages/: 10_How_to_Use_Sibyl.py  10_Settings.py  2_Similar_Cases.py  2_Similar_Entities.py  2_Understand_the_Model.py  3_Compare_Cases.py  3_Filter_by_Prediction.py  3_Understand_the_Model.py  4_Contribution_Difference_between_Instances.py  4_Custom_Case.py  4_Experiment_with_Changes.py  4_Filter_by_Prediction.py  4_Understand_the_Model.py  5_Understand_the_Model.py  6_Change_over_Time.py
sibylapp/: api.py  categories.py  config.py  config.yml  configurations.py  context.py  contributions.py  data.py  entities.py  explore_feature.py  feature_distributions.py  filtering.py  grouped_contributions.py  helpers.py  importance.py  model.py  setup.py
sibylapp/compute/: api.py  context.py  contributions.py  entities.py  example_based.py  features.py  importance.py  model.py
sibylapp/view/: by_prediction.py  customized_entity.py  entity_difference.py  explore_feature.py  feature_contribution.py  feature_distributions.py  feature_importance.py  global_contributions.py  similar_entities.py
sibylapp/view/utils/: display.py  filtering.py  formatting.py  helpers.py  setup.py
sibylapp2/: config.py  config.yml  log.py
sibylapp2/compute/: api.py  context.py  contributions.py  entities.py  example_based.py  features.py  importance.py  model.py
sibylapp2/pages/: Change_over_Time.py  Compare_Entities.py  Edit_Features.py  Experiment_with_Changes.py  Explore_a_Prediction.py  Predict_into_Future.py  Prediction_Summary.py  Settings.py  Similar_Cases.py  Similar_Entities.py  Understand_the_Model.py
sibylapp2/view/: compare_entities.py  customized_entity.py  entity_difference.py  explore_feature.py  feature_contribution.py  feature_importance.py  filtering.py  global_contributions.py  helpers.py  sidebar.py  similar_entities.py  temporal_change.py
sibylapp2/view/plots/: charts.py  temporal_plots.py
sibylapp2/view/utils/: display.py  filtering.py  formatting.py  helpers.py  setup.py
