[tool.poetry]
name = "sibylapp2"
version = "0.1.0"
description = ""
authors = ["zyteka <zyteka@mit.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9, <3.12, !=3.9.7"
streamlit = "^1.22.0"
pyreal = "^0.4.5"
xgboost = "0.90"
streamlit-aggrid = "^0.3.4.post3"
plotly = "^5.17.0"
extra-streamlit-components = "^0.1.56"
inflect = "^6.0.4"
streamlit-plotly-events = "^0.0.6"
isort = "^5.12.0"
pylint = "^2.17.4"
invoke = "^2.1.3"
black = "^23.3.0"
pyyaml = "^6.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 99
preview = true

[tool.isort]
profile = "black"
line_length = 99
skip = ["__init__.py"]

[tool.pylint.MAIN]
disable = ["missing-docstring",
          "consider-using-f-string",
          "no-member",
          "use-dict-literal",
          "no-else-return",
          "unspecified-encoding",
          "too-many-arguments"]
[tool.pylint.BASIC]
good-names = ["x", "y", "X", "df"]
